Migrate server servlets to Jakarta for Tomcat 11
- Switch javax.servlet imports to jakarta.servlet
- Enable multipart uploads via @MultipartConfig and request.getParts
- Modernize Base64 usage to java.util.Base64
- Update web.xml schema to Jakarta Servlet 6.0